# ewah_bool_utils

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  pyproject.toml  python-app.yml  requirements_dev.txt  setup.cfg  setup.py  setupext.py  test_requirements.txt  tox.ini
.github/workflows/: bleeding-edge.yaml  build-test.yaml  python-package.yml  wheels.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ewah_bool_utils/: __init__.py  _testing.pyx  ewah_bool_array.pxd  ewah_bool_wrap.pxd  ewah_bool_wrap.pyx  geometry_utils.pxd  geometry_utils.pyx  morton_utils.pxd  morton_utils.pyx
src/ewah_bool_utils/: __init__.py
tests/: test_ewah_bool_utils.py  test_ewah_bool_utils_cy.pyx  test_ewah_bool_utils_cy.pyxbld
