[build-system]
# keep in sync with wheels.yaml
requires = [
    "setuptools>=61.2",
    "wheel>=0.45.0",
    "Cython>=3.0.12 ; python_version < '3.11'",
    "Cython>=3.1.1 ; python_version >= '3.11'",
    "numpy>=2.0.0",
]

[project]
name = "ewah_bool_utils"
version = "1.3.0"
description = "EWAH Bool Array utils for yt"
authors = [
  { name = "Matthew Turk" },
  { name = "Meagan Lang" },
  { name = "Navaneeth Suresh" },
]
requires-python =">=3.10"
dependencies = [
  # match the absolute oldest version of numpy with *any*
  # level of support for our minimal Python requirement
  "numpy>=1.21.2, <3",
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 1 - Unstable"
]

[project.license]
text = "BSD"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"


[project.urls]
Homepage = "https://github.com/yt-project/ewah_bool_utils"

[tool.setuptools]
license-files = [
    "LICENSE",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
]

[tool.ruff.lint]
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.cibuildwheel]
skip = ["cp314t-*"]
build-frontend = "build[uv]"
build-verbosity = 1
test-groups = ["test"]
test-command = [
    "python -m pytest --pyargs ewah_bool_utils --color=yes -ra",
]
environment = {EWAH_BOOL_UTILS_LIMITED_API="1"}

[tool.cibuildwheel.linux]
archs = "x86_64"

[tool.cibuildwheel.macos]
archs = "auto64"

[tool.cibuildwheel.windows]
archs = "auto64"

[[tool.cibuildwheel.overrides]]
# Install numpy from nightly wheels as not yet on PyPI.
select = "cp314*"
before-test = "uv pip install --pre --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy"
